--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "tailwind",
+  "name": "projeto",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
-    
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  
-  "devDependencies": {
-    "tailwindcss": "^3.3.5"
+  "author": "Matheus <matheus@horadecodar.com.br> (http://www.horadecodar.com.br/)",
+  "license": "MIT",
+  "dependencies": {
+    "tailwindcss": "^1.9.0"
   }
 }
