--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "projeto",
+  "name": "tailwind",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    
+
   },
   "keywords": [],
-  "author": "Matheus <matheus@horadecodar.com.br> (http://www.horadecodar.com.br/)",
-  "license": "MIT",
-  "dependencies": {
-    "tailwindcss": "^1.9.0"
+  "author": "vitor bruno",
+  "license": "ISC",
+  
+  "devDependencies": {
+    "tailwindcss": "^3.3.5"
   }
 }
